--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
         .projects-list { display: flex; flex-direction: column; gap: 1.7rem; }
         .project-card {
             border: 1px solid var(--border-color); border-radius: 0.75rem;
-            padding: 1.6rem 1.25rem 1.25rem 1.25rem; box-shadow: 0 1px 3px rgba(0,0,0,0.04); 
-            display: flex; flex-direction: column; background-color: var(--card-bg); 
+            padding: 1.6rem 1.25rem 1.25rem 1.25rem; box-shadow: 0 2px 4px -2px rgba(15, 23, 42, 0.06), 0 4px 8px -2px rgba(15, 23, 42, 0.1); 
+            display: flex; flex-direction: column; background-color: #f8fafc; 
             position: relative;
         }
         
