--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         .week-calendar-day:not(.current-day):hover { background-color: #f8fafc; border-color: var(--border-color); }
 
         .project-list-section {
-            background: #f8fafc; border-radius: 1rem; padding: 1.1rem;
+            background: var(--card-bg); border-radius: 1rem; padding: 1.1rem;
             box-shadow: var(--shadow); border: 1px solid var(--border-color);
         }
         .project-list-section#activeProjectsSection {
@@ -214,7 +214,7 @@
         .project-card {
             border: 1px solid var(--border-color); border-radius: 0.75rem;
             padding: 1.6rem 1.25rem 1.25rem 1.25rem; box-shadow: 0 1px 3px rgba(0,0,0,0.04); 
-            display: flex; flex-direction: column; background-color: var(--card-bg); 
+            display: flex; flex-direction: column; background-color: #fafafa; 
             position: relative;
         }
         
