--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         .project-card {
             border: 1px solid var(--border-color); border-radius: 0.75rem;
             padding: 1.6rem 1.25rem 1.25rem 1.25rem; box-shadow: 0 1px 3px rgba(0,0,0,0.04); 
-            display: flex; flex-direction: column; background-color: #D1F3EE; 
+            display: flex; flex-direction: column; background-color: #F7F9FA; 
             position: relative;
         }
         
