--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             max-height: 350px; margin-top: 1rem;
             padding-top: 0.75rem; border-top: 1px solid var(--border-color); 
         }
-        .task-item, .subtask-item { display: flex; align-items: flex-start; gap: 0.75rem; padding: 0.5rem 0.25rem; border-bottom: 1px solid var(--border-color); }
+        .task-item, .subtask-item { display: flex; align-items: flex-start; gap: 0.75rem; padding: 0.5rem 0.25rem; border-bottom: 1px dashed var(--border-color); }
         .task-item:last-child, .subtask-item:last-child { border-bottom: none; }
         .subtask-item { margin-left: 2rem; } 
         
